--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>《移風·異俗》</title>
 	<link rel="icon" href="image/puppygirls(1).ico">
-	<link rel="stylesheet" href="css/index1.css">
+	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 	<!-- 大圖輪播or視覺差效果 -->
