--- a/html/zyx.html
+++ b/html/zyx.html
@@ -13,7 +13,6 @@
     <div class="nav">
         <ul class="navlist">
             <li class="btli" id="title"><a href="../index.html">移風·異俗</a></li>
-            <li class="btli"><a href="#店家位置">店家位置</a></li>
             <li class="btli"><a href="#舉辦活動">舉辦活動</a></li>
             <li class="btli"><a href="#採訪影片">採訪影片</a></li>
             <li class="btli"><a href="#受訪者介紹">受訪者介紹</a></li>
@@ -22,18 +21,23 @@
     <!-- 受訪者介紹 -->
     <div id="受訪者介紹">
         <img src="../image/素材/照片/IMG_9478.jpg" alt="">
-        <div content>
-            <h3>張郁馨</h3>
+        <h3>
+            張郁馨
+        </h3>
+        <h4>
+            國小泰語老師／泰國文化講師／泰語翻譯
+        </h4>
+        <span class="content">
             <p>
-            來自泰國北部清邁省的張郁馨老師今年已經在台灣長居15年。
-            <br>
-            郁馨老師坦言對她而言，在台灣最大的挑戰是如何適應一個新的語言，因為平時與丈夫相處時，也都是用英文溝通，導致她的中文進步緩慢。“第一年更痛苦的就是很多人會說，你嫁來台灣為什麼不會說中文？”，這件事情對她的打擊不小，幸而郁馨老師的丈夫貼心安慰她不要把那些言語放在心上，後來在某次活動中因為語言不通，導致她無法專心投入其中後，她終於下定決心跟丈夫約定好，以後的對話都用全中文來進行，遇到不太理解的詞句時，其丈夫也會細心解釋給她聽，給予她極大的信心堅持下去。
-            <br>
+            來自泰國北部清邁省的張郁馨老師今年已經在台灣長居15年。郁馨老師坦言對她而言，在台灣最大的挑戰是如何適應一個新的語言，因為平時與丈夫相處時，也都是用英文溝通，導致她的中文進步緩慢。“第一年更痛苦的就是很多人會說，你嫁來台灣為什麼不會說中文？”，這件事情對她的打擊不小，幸而郁馨老師的丈夫貼心安慰她不要把那些言語放在心上，後來在某次活動中因為語言不通，導致她無法專心投入其中後，她終於下定決心跟丈夫約定好，以後的對話都用全中文來進行，遇到不太理解的詞句時，其丈夫也會細心解釋給她聽，給予她極大的信心堅持下去。
+            </p>
+            <p>
             隨著政府推廣新南向政策發展，各級學校也都正在積極推廣新住民語言教育。台灣教育部更是開放「1人選課就開班」，讓許多老師需要在學校間奔波，隨著開班需求增加，老師被好幾所學校共聘、多校授課是一件常見的事情，郁馨老師更是其中一員。回想起當初鼓起勇氣去應聘的過程，郁馨老師說因為自己的中文並不流利，當下並不感興趣，但是不忍心拒絕丈夫的一片好心，所以還是去了面試。在面試的過程中她也才了解原來台灣在推廣新住民語言以及第二外語教育方面所進行的努力。因為泰語老師的極度稀缺，反倒引起了郁馨老師想要將泰國文化介紹給更多人知道的想法。
-            <br>
+            </p>
+            <p>
             在當老師的這三年裡，從一開始的教學課綱全用背的，到現在郁馨已經有了自己習慣的教學方式。“不用全部都用課本教，語言是很簡單可變通的，你想用什麼方式都可以。”郁馨老師用唱泰語歌、跳泰國舞、玩遊戲的方式來吸引小朋友們的注意力，對她而言，教泰語不止是一份工作，更是給予她快樂與成就感的一件事情。
             </p>
-        </div>
+        </span>
     </div>
     <!-- 採訪影片 -->
     <div id="採訪影片" >
@@ -41,9 +45,8 @@
           <h2>採訪影片</h2>  
         </div>
         <div class="video">
-            <embed src="../video/MVI_9495.mp4" type="">
+            <iframe src="https://www.youtube.com/embed/ATwl6WdMa6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        
     </div>
     <!-- 舉辦活動 -->
     <div id="舉辦活動">
@@ -51,36 +54,41 @@
             <h2>舉辦活動</h2>
         </div>
         <div class="輪播圖">
-            <ul>
-                <li><img src="../image/素材/照片/IMG_5262.jpeg" alt=""></li>
-                <li><img src="../image/素材/照片/IMG_9601.jpg" alt=""></li>
-                <li><img src="../image/素材/照片/IMG_9576.jpg" alt=""></li>
-            </ul>
+             <img src="../image/素材/照片/IMG_5262.jpeg" alt="">
+             <img src="../image/素材/照片/IMG_9601.jpg" alt="">
+              <img src="../image/素材/照片/IMG_9576.jpg" alt="">
         </div>
     </div> 
-    <!-- 店家位置 -->
-    <div id="店家位置">
-        <div class="positiontitle">
-            <h2>店家位置</h2>
-        </div>
-        <div class="地圖">地圖</div>
-    </div>
     <!-- 友站連結 -->
     <div id="link">
         <div id="linkdetail">
-            <!-- M.I.T社群 -->
-            <!-- 迦南計劃官網 -->
-            <!-- 台灣新移民協會網址 -->
-            <!-- IG、FB社群 -->
-                <!-- QRcode -->
+            <div class="img">
+                <img src="../image/puppygirls(1).png" alt="">
+            </div>
+            <div class="detail">
+                狗派少女製作團隊<br>
+                Email：puppygirls@gmail.com<br>
+                Tel：0952-593912<br>
+                433台中市沙鹿區台灣大道七段200號<br>
+                關於我們<br>
+            </div>
+            <div class="detail">
+                M.I.T社群<br>
+                迦南計劃官網<br>
+                台灣新移民協會網址<br>
+            </div>
+            <div class="detail">
+                IG、FB社群<br>
+                QRcode<br>
+            </div>
         </div>
         <div id="last" >
-            &copy; Puppy Girls
+            &copy; 靜宜大學大眾傳播學系 Puppy Girls 2022
         </div>
     </div>
     <!-- 回到頂部 -->
     <div class="backtop">
-        <a href="#top">^</a>
+        <a href="#大圖輪播">^</a>
     </div>
 </body>
 </html>
