--- a/html/puppygirls.html
+++ b/html/puppygirls.html
@@ -33,10 +33,9 @@
             <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             除此之外，團隊名稱的「狗派」是台語「夠壞」的諧音，緣起是因為出社會後的我們大概率會需要順應社會變得圓滑、乖巧，而這個作品與這最後一年的大學時光，是我們最後可以任性“使壞”，只做自己想做的事情的少女時代。
-</p>
+        </p>
     </div>
-    <!-- 關於我們 -->
-    <div id="關於我們">
+    <div class="關於我們">
         <div class="puppygirls">
             <div class="lim" style="--i:0"></div>
             <div class="xyxyx" style="--i:1"></div>
