--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<!-- Pindy -->
 			<div class="people">
 				<span class="c13-1">
-					<img src="image/Pindy.jpg" alt="Pindy.img">
+					<img src="image/pindy.jpg" alt="Pindy.img">
 				</span>
 				<span class="c13-2">
 					<br><br><br>
