--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<h4>Yuki Chen 阮氏雪</h4>
 					<p>來自越南北越宣光省的Yuki初到台灣的時候因為語言不通而受挫，但不服輸的她頻頻突破自我，從翻譯到自行創業，她透過美容美髮行業結合越南文化，現為越式美容創辦人、美容講師、玩美高手團隊創辦人。</p>
 					<div class="c13-2more">
-						<a href="html/Yuki.html">&lt; 查看更多 &gt;</a>
+						<a href="html/yuki.html">&lt; 查看更多 &gt;</a>
 					</div>
 				</span>
 				<div class="clearfix"></div>
