--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<h4>Isaac Yong 楊冠義</h4>
 					<p>來自馬來西亞馬六甲的Isaac 已長居在台灣14年，身為點評製的第一批受惠者，為了協助在台畢業之僑外生留台發展、就業，他於2016年創立【Malaysian in Taiwan】社群，而後在2020年成立了【迦南計劃】-——致力於協助媒合企業與僑外生人才求職就業。</p>
 					<div class="c13-2more">
-						<a href="html/Isaac.html">&lt; 查看更多 &gt;</a>
+						<a href="html/isaac.html">&lt; 查看更多 &gt;</a>
 					</div>
 				</span>
 				<span class="c2-1">
