--- a/html/zyx.html
+++ b/html/zyx.html
@@ -29,13 +29,25 @@
         </h4>
         <span class="content">
             <p>
-            來自泰國北部清邁省的張郁馨老師今年已經在台灣長居15年。郁馨老師坦言對她而言，在台灣最大的挑戰是如何適應一個新的語言，因為平時與丈夫相處時，也都是用英文溝通，導致她的中文進步緩慢。“第一年更痛苦的就是很多人會說，你嫁來台灣為什麼不會說中文？”，這件事情對她的打擊不小，幸而郁馨老師的丈夫貼心安慰她不要把那些言語放在心上，後來在某次活動中因為語言不通，導致她無法專心投入其中後，她終於下定決心跟丈夫約定好，以後的對話都用全中文來進行，遇到不太理解的詞句時，其丈夫也會細心解釋給她聽，給予她極大的信心堅持下去。
+            來自泰國北部清邁省的張郁馨與台灣籍的丈夫在泰國相識相戀，目前育有一兒一女，今年已經是在台灣居住的第十五年。除了在台中地區多所國中、小擔任泰語老師，教授泰國文化以及相關習俗外，郁馨也時常在不同活動中擔任泰國舞者，更是受邀參與過上百場演講的泰國文化講師，可以說她對於宣揚泰國文化有著汗馬功績。
             </p>
             <p>
-            隨著政府推廣新南向政策發展，各級學校也都正在積極推廣新住民語言教育。台灣教育部更是開放「1人選課就開班」，讓許多老師需要在學校間奔波，隨著開班需求增加，老師被好幾所學校共聘、多校授課是一件常見的事情，郁馨老師更是其中一員。回想起當初鼓起勇氣去應聘的過程，郁馨老師說因為自己的中文並不流利，當下並不感興趣，但是不忍心拒絕丈夫的一片好心，所以還是去了面試。在面試的過程中她也才了解原來台灣在推廣新住民語言以及第二外語教育方面所進行的努力。因為泰語老師的極度稀缺，反倒引起了郁馨老師想要將泰國文化介紹給更多人知道的想法。
+            在嫁來台灣之前，郁馨的家人也曾擔心她來台後的境遇，若是被騙或者受委屈時怎麼辦？因為是跨國婚姻無法立即回娘家，身邊也沒有可依靠的家人，但當時郁馨的丈夫在泰國時處處照顧她，家人也從日常相處中逐漸喜歡上他，的真心最終打動了郁馨的家人，而他們也決定尊重郁馨的選擇，放手讓她移居台灣。
             </p>
             <p>
-            在當老師的這三年裡，從一開始的教學課綱全用背的，到現在郁馨已經有了自己習慣的教學方式。“不用全部都用課本教，語言是很簡單可變通的，你想用什麼方式都可以。”郁馨老師用唱泰語歌、跳泰國舞、玩遊戲的方式來吸引小朋友們的注意力，對她而言，教泰語不止是一份工作，更是給予她快樂與成就感的一件事情。
+            郁馨坦言，對於她來說在台灣最大的挑戰是如何適應一個新的語言，最初來台時與丈夫相處都是用英文溝通，導致她的中文進步緩慢，「第一年更痛苦的就是很多人會說『妳嫁來台灣為什麼不會說中文？』。」這件事情對她的打擊不小，當時多虧郁馨的丈夫貼心安慰她告訴她不要把那些言論放在心上，後來在某次活動中因為語言不通導致郁馨無法專心投入，在這件事情過後，她終於下定決心向丈夫約定以後的對話都用全中文來進行，遇到不太理解的詞句時，丈夫也會細心解釋給她聽，給予她極大的信心能夠堅持下去。
+            </p>
+            <p>
+            回想起當初鼓起勇氣去應聘泰語老師的過程，郁馨說因為自己的中文不流利所以起初並不感興趣，但是不忍心拒絕丈夫的一片好心，所以還是去了面試，而在面試的過程中她才逐漸了解台灣在推廣新住民語言以及第二外語教育上所進行的努力。
+            </p>
+            <p>
+            隨著政府推行新南向政策，各級學校也都積極推廣新住民語言教育，台灣教育部更是規範「只要有1人選課即開班」的制度，隨著開班需求增加，老師被好幾所學校共聘、多校授課成為一件常見的事情，郁馨老師即是其中一員，且由於泰語老師的極度稀缺，反倒引起了郁馨老師想要將泰國文化介紹給更多人知道的想法。
+            </p>
+            <p>
+            在任職教師的三年裡，郁馨從一開始教學課綱需全用背的，到現在不用準備講稿也能夠以自己習慣的模式進行教學，「不用全部都用課本教，語言是很簡單可變通的，你想用什麼方式都可以。」，郁馨以玩遊戲、唱歌、跳舞的方式來吸引學生的注意力，對她而言，教泰語不止是一份工作，更是給予她快樂與成就感的一件事情。
+            </p>
+            <p>
+            溫暖，在台十五年的過程中當然有莽莽撞撞、磕磕碰碰，但大部分遇到的台灣人都給予郁馨老師極大的包容、熱心幫她解決所遇到的難題，對於郁馨老師而言，台灣的代名詞就是溫暖。
             </p>
         </span>
     </div>
