--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 <body>
 	<!-- 大圖輪播or視覺差效果 -->
 	<div id="大圖輪播">
-		<!-- <img src="../image/taiwan.png" alt=""> -->
+		<div id="Taiwan">
+			<img src="image/素材/照片/taiwan.png" alt="">
+		</div>
+		<div id="plane">
+			<img  src="image/素材/照片/plane.png" alt="">
+		</div>
+		<span id="South">
+			<img  src="image/素材/照片/South-East-Asia.png" alt="">
+		</span>
 	</div>
 	<!-- 選項列 -->
 	<div class="nav">
@@ -35,12 +43,20 @@
 		<span>
 			<h1>《移風・異俗》</h1>
 			<h3>“The Sonder of Immigrants”</h3>
+			<br>
 			<p>
+				我們希望可以透過這個網站分享東南亞新移民、移工來台灣背後的故事。
+			<br>
+				「移風」二字是縮寫自新移民及新住民的風潮，「異俗」二字則是異國文化與風俗的縮寫。
+				<br>新移民的到來讓台灣人民了解到不同國家的文化與風俗的差異
 				<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				此名稱發想自我們的作品内容，我們希望可以透過這個網站分享東南亞新移民、移工來台灣背後的故事。「移風」二字是縮寫自新移民及新住民的風潮。「異俗」二字則是異國文化與風俗的縮寫。新移民的到來也讓台灣人民了解到不同國家的文化與風俗的差異，同時體現台灣對其他國家文化以及人民的包容性。
-				<br><br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;另外，網站名稱的英譯“The Sonder of Immigrants”。其“sonder”有「意識到自己生命中的每個過客都背負著不同故事」之意，同時亦有「生動複雜的人生」之意。希望可以大家透過網站了解這些看似不起眼，平日擦肩而過的“過客”的故事。
+				同時體現台灣對其他國家文化以及人民的包容性。
+				<br>
+				網站英譯 “The Sonder of Immigrants”。
+				<br>
+				“sonder” 兼具「意識到自己生命中的每個過客都背負著不同故事」及「生動複雜的人生」之意。
+				<br>
+				希望可以大家透過網站了解這些看似不起眼，平日擦肩而過的「過客」的故事。
 			</p>
 		</span>
 	</div>
@@ -217,8 +233,14 @@
 				台灣新移民協會網址<br>
 			</div>
 			<div class="detail">
-				IG、FB社群<br>
-				QRcode<br>
+				<div class="igfb">
+					<img src="image/素材/照片/ig.png" alt="">
+					<br><br>
+					<img src="image/素材/照片/fb.png" alt="">
+				</div>
+			</div>
+			<div class="lastplane">
+				<img src="image/素材/照片/plane.png" alt="">
 			</div>
 		</div>
 		<div id="last" >
@@ -227,7 +249,7 @@
 	</div>
 	<!-- 回到頂部 -->
 	<div class="backtop">
-		<a href="#大圖輪播">^</a>
+		<a href="#大圖輪播">Top</a>
 	</div>
 </body>
 </html>
