--- a/html/myz.html
+++ b/html/myz.html
@@ -26,8 +26,8 @@
     <div id="受訪者介紹">
         <div class="前言">
             <p>
-                尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完成尚未完。
-                </p>
+                來自泰國北部清邁省的張郁馨與台灣籍的丈夫在泰國相識相戀，目前育有一兒一女，今年已經是在台灣居住的第十五年。除了在台中地區多所國中、小擔任泰語老師，教授泰國文化以及相關習俗外，郁馨也時常在不同活動中擔任泰國舞者，更是受邀參與過上百場演講的泰國文化講師，可以說她對於宣揚泰國文化有著汗馬功績。
+            </p>
         </div>
         <div class="text">
             <!-- <h3>
