--- a/html/dnyxbk.html
+++ b/html/dnyxbk.html
@@ -115,7 +115,7 @@
 			<div>
 				<h2>
 					<a href="#">
-						<img src="../image/puppygirls.ico" alt="logo">
+						<img src="../image/logo.png" alt="logo">
 					</a>
 				</h2>
 			</div>
