--- a/html/isaac.html
+++ b/html/isaac.html
@@ -107,7 +107,7 @@
             <div>
                 <h2>
                     <a href="#">
-                        <img src="../image/puppygirls.ico" alt="logo">
+                        <img src="../image/logo.pngo" alt="logo">
                     </a>
                 </h2>
             </div>
