--- a/html/myz.html
+++ b/html/myz.html
@@ -118,7 +118,7 @@
             <div>
                 <h2>
                     <a href="#">
-                        <img src="../image/puppygirls.ico" alt="logo">
+                        <img src="../image/logo.png" alt="logo">
                     </a>
                 </h2>
             </div>
