--- a/html/pindy.html
+++ b/html/pindy.html
@@ -116,7 +116,7 @@
             <div>
                 <h2>
                     <a href="#">
-                        <img src="../image/puppygirls.ico" alt="logo">
+                        <img src="../image/logo.png" alt="logo">
                     </a>
                 </h2>
             </div>
