--- a/html/zyx.html
+++ b/html/zyx.html
@@ -106,7 +106,7 @@
             <div>
                 <h2>
                     <a href="#">
-                        <img src="../image/puppygirls.ico" alt="logo">
+                        <img src="../image/logo.png" alt="logo">
                     </a>
                 </h2>
             </div>
