--- a/index.html
+++ b/index.html
@@ -123,30 +123,6 @@
 	        		<h3>異&nbsp;&nbsp;俗</h3>
 	        		<span class="en">ISO-LIFE</span>
 	        	</a>
-	        	<!-- <a href="html/myz.html">
-	        		<h3>麥玉珍</h3>
-	        		<span class="en"></span>
-	        	</a>
-	        	<a href="html/isaac.html">
-	        		<h3>楊冠義</h3>
-	        		<span class="en">Isaac Yang</span>
-	        	</a>
-	        	<a href="html/yuki.html">
-	        		<h3>陳氏雪</h3>
-	        		<span class="en">Yuki Chen</span>
-	        	</a>
-	        	<a href="html/pindy.html">
-	        		<h3>菲達蒂</h3>
-	        		<span class="en">Pindy Windy</span>
-	        	</a>
-	        	<a href="html/fifi.html">
-	        		<h3>林蕙盈</h3>
-	        		<span class="en">Fiona / FiFi</span>
-	        	</a>
-	        	<a href="html/zyx.html">
-	        		<h3>張郁馨</h3>
-	        		<span class="en">Alisa</span>
-	        	</a> -->
 	        	<a href="html/dnyxbk.html">
 	        		<h3>東南亞小知識</h3>
 	        		<span class="en">ABOUT SOUTHEAST ASIA</span>
@@ -157,7 +133,7 @@
 	        	</a>
 	        </div>
 	        <h4>
-	        	<a href="#">
+	        	<a href="html/puppygirls.html">
 	        		<img src="image/關於我們/輪播大圖/girls.jpg">
 	        	</a>
 	        </h4>
